--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1534,7 +1534,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #c659ff;
+  background: #42f4ff;
 }
 .links-of-blogroll {
   font-size: 13px;
